--- a/p01/script_manu.ipynb
+++ b/p01/script_manu.ipynb
@@ -261,15 +261,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "a4136063",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Selección de características con SelectKBest y correlación\n",
+    "# Selección de características con SelectKBest\n",
     "from sklearn.feature_selection import SelectKBest, f_regression\n",
     "\n",
-    "def seleccion_kbest(df, k, target='calidad'):\n",
+    "def seleccion_caracteristicas(df, k, target='calidad'):\n",
     "    X = df.drop(columns=[target])\n",
     "    y = df[target]\n",
     "\n",
@@ -279,20 +279,7 @@
     "    selected_features = X.columns[selector.get_support()]\n",
     "\n",
     "    df_fs = df[selected_features.tolist() + [target]]\n",
-    "    return df_fs\n",
-    "\n",
-    "def seleccion_correlacion(df, n, target='calidad'):\n",
-    "    corr = df.corr(numeric_only=True)[target].abs().sort_values(ascending=False)\n",
-    "    selected_features = corr.index[1:n+1]\n",
-    "    return df[selected_features.tolist() + [target]]\n",
-    "\n",
-    "def seleccion_caracteristicas(df, n, funcion, target='calidad'):\n",
-    "    if funcion == 'kbest':\n",
-    "        return seleccion_kbest(df, n, target)\n",
-    "    elif funcion == 'correlacion':\n",
-    "        return seleccion_correlacion(df, n, target)\n",
-    "    else:\n",
-    "        raise ValueError(\"Función de selección no válida. Use 'kbest' o 'correlacion'.\")\n"
+    "    return df_fs\n"
    ]
   },
   {
@@ -308,14 +295,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b3ed3963",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import os\n",
+    "\n",
+    "def entrenar_o_cargar(modelo, X_train, y_train, nombre_modelo_archivo):\n",
+    "    #Cargar el modelo si existe\n",
+    "    if os.path.exists(nombre_modelo_archivo):\n",
+    "        with open(nombre_modelo_archivo, \"rb\") as f:\n",
+    "            modelo = pickle.load(f)\n",
+    "    #Si no existe, entrenar el modelo y guardarlo\n",
+    "    else:\n",
+    "        modelo.fit(X_train, y_train)\n",
+    "        with open(nombre_modelo_archivo, \"wb\") as f:\n",
+    "            pickle.dump(modelo, f)\n",
+    "    \n",
+    "    return modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21fcf48e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Modelo de entrenamiento\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
     "def nested_cv(df, target='calidad'):\n",
     "    \"\"\"\n",
@@ -347,7 +359,7 @@
     "        # Dividir train_outer en 4 pedazos para inner CV\n",
     "        inner_splits = np.array_split(train_outer.sample(frac=1, random_state=outer_iter), 4)\n",
     "        \n",
-    "        inner_results = []\n",
+    "        inner_results, model_config = []\n",
     "        \n",
     "        # Inner CV\n",
     "        for inner_iter in range(4):\n",
@@ -357,15 +369,29 @@
     "            # Preprocesar\n",
     "            df_train, df_val = preprocesado(inner_train_pre, inner_valid_pre, target)\n",
     "            \n",
-    "            # --- Aquí va el entrenamiento de los modelos ---\n",
+    "            # ENTRENAMIENTO :)\n",
     "\n",
-    "            # Guardar info del cada ejecución del fold interno\n",
-    "            inner_results.append({\n",
-    "                \"inner_iter\": inner_iter,\n",
-    "                \"train_rows\": len(df_train),\n",
-    "                \"valid_rows\": len(df_val),\n",
-    "                # \"score\": score\n",
+    "\n",
+    "\n",
+    "            model_config.append({\n",
+    "                \"name\": \"knn\",\n",
+    "                \"model\": KNeighborsClassifier,\n",
+    "                \"params\": {\"n_neighbors\": 3},\n",
+    "                \"score\": 0.0 # esto se calcula con el modelo blabla\n",
     "            })\n",
+    "\n",
+    "\n",
+    "            # AL FINAL DEL INNER FOLD: Guardar info de la mejor ejecución del fold interno\n",
+    "            best_score = -np.inf\n",
+    "            for model in model_config:\n",
+    "                if model[\"score\"] > best_score:\n",
+    "                    best_score = model[\"score\"]\n",
+    "                    inner_results.append({\n",
+    "                        \"inner_iter\": inner_iter,\n",
+    "                        \"model\": model[\"name\"],\n",
+    "                        \"params\": model[\"params\"],\n",
+    "                        \"score\": model[\"score\"]\n",
+    "                    })\n",
     "        \n",
     "        # Preprocesar outer validation usando train outer\n",
     "        train_outer_proc, valid_outer_proc = preprocesado(train_outer, valid_outer, target)\n",
@@ -375,22 +401,12 @@
     "\n",
     "        results.append({\n",
     "            \"outer_iter\": outer_iter,\n",
-    "            \"train_rows_outer\": len(train_outer_proc),\n",
-    "            \"valid_rows_outer\": len(valid_outer_proc),\n",
     "            \"inner_folds\": inner_results,\n",
     "            # \"outer_score\": outer_score\n",
     "        })\n",
     "\n",
     "    return results\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21fcf48e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
