--- a/p01/script.ipynb
+++ b/p01/script.ipynb
@@ -281,7 +281,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "c959d463",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import os\n",
+    "\n",
+    "def entrenar_o_cargar(modelo, X_train, y_train, nombre_modelo_archivo):\n",
+    "    #Cargar el modelo si existe\n",
+    "    if os.path.exists(nombre_modelo_archivo):\n",
+    "        with open(nombre_modelo_archivo, \"rb\") as f:\n",
+    "            modelo = pickle.load(f)\n",
+    "    #Si no existe, entrenar el modelo y guardarlo\n",
+    "    else:\n",
+    "        modelo.fit(X_train, y_train)\n",
+    "        with open(nombre_modelo_archivo, \"wb\") as f:\n",
+    "            pickle.dump(modelo, f)\n",
+    "    \n",
+    "    return modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "2fead309",
    "metadata": {},
    "outputs": [],
@@ -289,6 +313,7 @@
     "# Modelo de entrenamiento\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
     "def nested_cv(df, target='calidad'):\n",
     "    \"\"\"\n",
@@ -320,7 +345,7 @@
     "        # Dividir train_outer en 4 pedazos para inner CV\n",
     "        inner_splits = np.array_split(train_outer.sample(frac=1, random_state=outer_iter), 4)\n",
     "        \n",
-    "        inner_results = []\n",
+    "        inner_results, model_config = []\n",
     "        \n",
     "        # Inner CV\n",
     "        for inner_iter in range(4):\n",
@@ -332,13 +357,27 @@
     "            \n",
     "            # ENTRENAMIENTO :)\n",
     "\n",
-    "            # Guardar info del cada ejecución del fold interno\n",
-    "            inner_results.append({\n",
-    "                \"inner_iter\": inner_iter,\n",
-    "                \"train_rows\": len(df_train),\n",
-    "                \"valid_rows\": len(df_val),\n",
-    "                # \"score\": score\n",
+    "\n",
+    "\n",
+    "            model_config.append({\n",
+    "                \"name\": \"knn\",\n",
+    "                \"model\": KNeighborsClassifier,\n",
+    "                \"params\": {\"n_neighbors\": 3},\n",
+    "                \"score\": 0.0 # esto se calcula con el modelo blabla\n",
     "            })\n",
+    "\n",
+    "\n",
+    "            # AL FINAL DEL INNER FOLD: Guardar info de la mejor ejecución del fold interno\n",
+    "            best_score = -np.inf\n",
+    "            for model in model_config:\n",
+    "                if model[\"score\"] > best_score:\n",
+    "                    best_score = model[\"score\"]\n",
+    "                    inner_results.append({\n",
+    "                        \"inner_iter\": inner_iter,\n",
+    "                        \"model\": model[\"name\"],\n",
+    "                        \"params\": model[\"params\"],\n",
+    "                        \"score\": model[\"score\"]\n",
+    "                    })\n",
     "        \n",
     "        # Preprocesar outer validation usando train outer\n",
     "        train_outer_proc, valid_outer_proc = preprocesado(train_outer, valid_outer, target)\n",
@@ -348,8 +387,6 @@
     "\n",
     "        results.append({\n",
     "            \"outer_iter\": outer_iter,\n",
-    "            \"train_rows_outer\": len(train_outer_proc),\n",
-    "            \"valid_rows_outer\": len(valid_outer_proc),\n",
     "            \"inner_folds\": inner_results,\n",
     "            # \"outer_score\": outer_score\n",
     "        })\n",
