--- a/p01/script.ipynb
+++ b/p01/script.ipynb
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "2fead309",
    "metadata": {},
    "outputs": [],
@@ -314,6 +314,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "model_configs = []\n",
     "\n",
     "def nested_cv(df, target='calidad'):\n",
     "    \"\"\"\n",
@@ -332,7 +334,18 @@
     "    outer_splits = np.array_split(df_shuffled, 6)\n",
     "    \n",
     "    results = []\n",
-    "    \n",
+    "\n",
+    "    #Se construye el diccionario para cada iteración externa -> se almacena un array de puntuaciones para cada modelo evaluado en la VC interna\n",
+    "    #El que tenga mejor media será el usado para entrenar con el conjunto completo del fold externo y evaluar en su validación externa\n",
+    "    inner_models = []\n",
+    "    # Inicializar estructura para acumular scores\n",
+    "    for config in model_configs:\n",
+    "        inner_models.append({\n",
+    "            \"name\": config[\"name\"],\n",
+    "            \"model\": config[\"model\"],\n",
+    "            \"params\": config[\"params\"],\n",
+    "            \"scores\": []\n",
+    "        })\n",
     "    # Outer CV\n",
     "    for outer_iter in range(3):\n",
     "        # Elegimos 4 pedazos para train, 2 para val\n",
@@ -345,8 +358,6 @@
     "        # Dividir train_outer en 4 pedazos para inner CV\n",
     "        inner_splits = np.array_split(train_outer.sample(frac=1, random_state=outer_iter), 4)\n",
     "        \n",
-    "        inner_results, model_config = []\n",
-    "        \n",
     "        # Inner CV\n",
     "        for inner_iter in range(4):\n",
     "            inner_valid_pre = inner_splits[inner_iter]\n",
@@ -354,44 +365,50 @@
     "            \n",
     "            # Preprocesar\n",
     "            df_train, df_val = preprocesado(inner_train_pre, inner_valid_pre, target)\n",
-    "            \n",
-    "            # ENTRENAMIENTO :)\n",
+    "            #Se separan características y etiquetas para entrenamiento y validación\n",
+    "            X_train = df_train.drop(columns=[target])\n",
+    "            y_train = df_train[target]\n",
+    "            X_val = df_val.drop(columns=[target])\n",
+    "            y_val = df_val[target]\n",
     "\n",
     "\n",
+    "            # Bucle que recorre los modelos con sus configuraciones guardadas en model_configs\n",
+    "            for i, config in enumerate(model_configs):\n",
+    "                # Inicializar el modelo con los parámetros de la configuración\n",
+    "                modelo = config[\"model\"](**config[\"params\"])\n",
+    "                \n",
+    "                # Entrenar el modelo y evaluar en validación interna\n",
+    "                modelo = entrenar_o_cargar(modelo, X_train, y_train, f\"modelo_{config['name']}_outer{outer_iter}_inner{inner_iter}.pkl\")\n",
+    "                preds = modelo.predict(X_val)\n",
+    "                score = accuracy_score(y_val, preds)\n",
+    "                \n",
+    "                # Guardar la puntuación obtenida para esta configuración\n",
+    "                inner_models[i][\"scores\"].append(score)\n",
     "\n",
-    "            model_config.append({\n",
-    "                \"name\": \"knn\",\n",
-    "                \"model\": KNeighborsClassifier,\n",
-    "                \"params\": {\"n_neighbors\": 3},\n",
-    "                \"score\": 0.0 # esto se calcula con el modelo blabla\n",
-    "            })\n",
+    "        for model in inner_models:\n",
+    "            model[\"mean_score\"] = np.mean(model[\"scores\"])\n",
+    "        best_model = max(inner_models, key=lambda x: x[\"mean_score\"])\n",
     "\n",
-    "\n",
-    "            # AL FINAL DEL INNER FOLD: Guardar info de la mejor ejecución del fold interno\n",
-    "            best_score = -np.inf\n",
-    "            for model in model_config:\n",
-    "                if model[\"score\"] > best_score:\n",
-    "                    best_score = model[\"score\"]\n",
-    "                    inner_results.append({\n",
-    "                        \"inner_iter\": inner_iter,\n",
-    "                        \"model\": model[\"name\"],\n",
-    "                        \"params\": model[\"params\"],\n",
-    "                        \"score\": model[\"score\"]\n",
-    "                    })\n",
-    "        \n",
     "        # Preprocesar outer validation usando train outer\n",
     "        train_outer_proc, valid_outer_proc = preprocesado(train_outer, valid_outer, target)\n",
-    "        \n",
-    "        # aqui entreno en train_outer_proc el modelo con mejor puntuación del la VC interna y evalúo en valid_outer_proc\n",
-    "        \n",
+    "        # Entrenar el mejor modelo en todo el outer train y evaluar en outer valid\n",
+    "        X_train_outer = train_outer_proc.drop(columns=[target])\n",
+    "        y_train_outer = train_outer_proc[target]\n",
+    "        X_valid_outer = valid_outer_proc.drop(columns=[target])\n",
+    "        y_valid_outer = valid_outer_proc[target]\n",
     "\n",
+    "        # Entrenar el mejor modelo con los datos del outer train\n",
+    "        modelo_outer = best_model[\"model\"](**best_model[\"params\"])\n",
+    "        modelo_outer = entrenar_o_cargar(modelo_outer, X_train_outer, y_train_outer, f\"best_model_outer{outer_iter}.pkl\")\n",
+    "        preds = modelo_outer.predict(X_valid_outer)\n",
+    "        score = accuracy_score(y_valid_outer, preds)\n",
     "        results.append({\n",
     "            \"outer_iter\": outer_iter,\n",
-    "            \"inner_folds\": inner_results,\n",
-    "            # \"outer_score\": outer_score\n",
+    "            \"best_model\": best_model,\n",
+    "            \"score\": score\n",
     "        })\n",
-    "\n",
-    "    return results\n"
+    "    best_overall_model = max(results, key=lambda x: x[\"score\"])\n",
+    "    return best_overall_model, results\n"
    ]
   },
   {
